--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -9,7 +9,9 @@
             <aside id="featured" class="body">
                 <article>
                     <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-                    {% include 'article_infos.html' %}{{ article.content }}{% include 'comments.html' %}
+                    {{ article.content }}
+                    {% include 'article_infos.html' %}
+                    {% include 'comments.html' %}
                 </article>
             </aside><!-- /#featured -->
             {% if loop.length > 1 %}
@@ -31,10 +33,8 @@
                 </header>
 
                 <div class="entry-content">
-                {% include 'article_infos.html' %}
                 {{ article.summary }}
                 <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
-                {% include 'comments.html' %}
                 </div><!-- /.entry-content -->
             </article></li>
         {% endif %}
