--- a/theme/templates/disqus_script.html
+++ b/theme/templates/disqus_script.html
@@ -1,4 +1,5 @@
-{% if DISQUS_SITENAME %}
+{% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
+<!-- FIXME: Old version, is it good? :) -->
 <script type="text/javascript">
     var disqus_shortname = '{{ DISQUS_SITENAME }}';
     (function () {
@@ -8,4 +9,21 @@
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
+<!-- FIXME: New version, looks better!
+<div class="comments">
+  <h2>Comments !</h2>
+  <div id="disqus_thread"></div>
+  <script type="text/javascript">
+    var disqus_shortname = '{{ DISQUS_SITENAME }}';
+    var disqus_identifier = '{{ article.url }}';
+    var disqus_url = '{{ SITEURL }}/{{ article.url }}';
+    (function() {
+    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+  </script>
+  <noscript>Please enable JavaScript to view the comments.</noscript>
+</div>
+-->
 {% endif %}
