--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -49,9 +49,8 @@
                         </ul>
                 </div><!-- /.blogroll -->
         {% endif %}
-        {% if SOCIAL or FEED_ALL_ATOM or FEED_ALL_RSS %}
+        {% if FEED_ALL_ATOM or FEED_ALL_RSS %}
                 <div class="social">
-                        <h2>social</h2>
                         <ul>
                             {% if FEED_ALL_ATOM %}
                             <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate">atom feed</a></li>
@@ -59,10 +58,6 @@
                             {% if FEED_ALL_RSS %}
                             <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate">rss feed</a></li>
                             {% endif %}
-
-                        {% for name, link in SOCIAL %}
-                            <li><a href="{{ link }}">{{ name }}</a></li>
-                        {% endfor %}
                         </ul>
                 </div><!-- /.social -->
         {% endif %}
