--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -8,14 +8,10 @@
  *  Original author: Enrique Ramírez <http://enrique-ramirez.com/>
 **/
 
-/* Imports */
 @import url("reset.css");
 @import url("pygment.css");
 @import url("typogrify.css");
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
 
-/***** Global *****/
-/* Body */
 body {
     background: #F5F4EF;
     color: #000305;
@@ -111,9 +107,6 @@ blockquote {
     margin: 20px;
     font-style: italic;
 }
-cite {}
-
-q {}
 
 div.note {
    float: right;
@@ -247,9 +240,9 @@ Featured
 #featured h3 a:link, #featured h3 a:visited {color: #000305; text-decoration: none;}
 #featured h3 a:hover, #featured h3 a:active {color: #fff;}
 
-/*
-    Body
-*****************/
+/* ######################################################################### *
+ * Body
+ * ######################################################################### */
 #content {
     background: #fff;
     margin-bottom: 2em;
@@ -262,9 +255,9 @@ Featured
     -webkit-border-radius: 10px;
 }
 
-/*
-    Extras
-*****************/
+/* ######################################################################### *
+ * Extras
+ * ######################################################################### */
 #extras {margin: 0 auto 3em auto; overflow: hidden;}
 
 #extras ul {list-style: none; margin: 0;}
@@ -286,7 +279,9 @@ Featured
 
 #extras a:hover, #extras a:active {color: #fff;}
 
-/* Social */
+/* ######################################################################### *
+ * Social
+ * ######################################################################### */
 #extras .social {
     float: right;
     width: 175px;
@@ -299,36 +294,15 @@ Featured
 }
 
 /* Icons */
-.social a[href*='about.me'] {background-image: url('../images/icons/aboutme.png');}
-.social a[href*='bitbucket.org'] {background-image: url('../images/icons/bitbucket.png');}
-.social a[href*='delicious.com'] {background-image: url('../images/icons/delicious.png');}
-.social a[href*='digg.com'] {background-image: url('../images/icons/digg.png');}
-.social a[href*='facebook.com'] {background-image: url('../images/icons/facebook.png');}
-.social a[href*='gitorious.org'] {background-image: url('../images/icons/gitorious.png');}
-.social a[href*='github.com'],
-.social a[href*='git.io'] {
-    background-image: url('../images/icons/github.png');
-    background-size: 16px 16px;
-}
-.social a[href*='gittip.com'] {background-image: url('../images/icons/gittip.png');}
-.social a[href*='plus.google.com'] {background-image: url('../images/icons/google-plus.png');}
-.social a[href*='groups.google.com'] {background-image: url('../images/icons/google-groups.png');}
-.social a[href*='news.ycombinator.com'],
-.social a[href*='hackernewsers.com'] {background-image: url('../images/icons/hackernews.png');}
-.social a[href*='last.fm'], .social a[href*='lastfm.'] {background-image: url('../images/icons/lastfm.png');}
-.social a[href*='linkedin.com'] {background-image: url('../images/icons/linkedin.png');}
-.social a[href*='reddit.com'] {background-image: url('../images/icons/reddit.png');}
-.social a[type$='atom+xml'], .social a[type$='rss+xml'] {background-image: url('../images/icons/rss.png');}
-.social a[href*='slideshare.net'] {background-image: url('../images/icons/slideshare.png');}
-.social a[href*='speakerdeck.com'] {background-image: url('../images/icons/speakerdeck.png');}
-.social a[href*='stackoverflow.com'] {background-image: url('../images/icons/stackoverflow.png');}
-.social a[href*='twitter.com'] {background-image: url('../images/icons/twitter.png');}
-.social a[href*='vimeo.com'] {background-image: url('../images/icons/vimeo.png');}
-.social a[href*='youtube.com'] {background-image: url('../images/icons/youtube.png');}
+.social a[href*='about.me'] { background-image: url('../images/icons/aboutme.png'); }
+.social a[href*='github.com'] { background-image: url('../images/icons/github.png'); }
+.social a[type$='atom+xml'],
+.social a[type$='rss+xml'] { background-image: url('../images/icons/rss.png'); }
+.social a[href*='twitter.com'] { background-image: url('../images/icons/twitter.png'); }
 
-/*
-    About
-*****************/
+/* ######################################################################### *
+ * About
+ * ######################################################################### */
 #about {
     background: #fff;
     font-style: normal;
@@ -408,7 +382,9 @@ li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 
 #about-author .photo {border: 1px solid #ddd; float: left; margin: 5px 1em 0 0;}
 
-/* Comments */
+/* ######################################################################### *
+ * Comments
+ * ######################################################################### */
 #comments-list {list-style: none; margin: 0 1em;}
 #comments-list blockquote {
     background: #f8f8f8;
