--- a/themes/hugo-xmin/layouts/talks/list.html
+++ b/themes/hugo-xmin/layouts/talks/list.html
@@ -6,14 +6,14 @@
 
 {{ .Content }}
 
-Inside template.
-
 <ul>
   {{ range (where .Data.Pages "Section" "!=" "") }}
   <li>
     <span class="date">{{ .Date.Format "2006/01/02" }}</span>
-    <a href="{{ .URL }}">{{ .Title }}</a>
-    {{ $.Param ".video" }}
+    <a href="{{ .URL }}"> {{ .Title }}
+      {{ if .Params.talktype }}
+        {{ printf "(%s)" .Params.talktype }}
+      {{ end }}</a>
   </li>
   {{ end }}
 </ul>
