--- a/themes/hugo-xmin/layouts/talks/single.html
+++ b/themes/hugo-xmin/layouts/talks/single.html
@@ -3,13 +3,16 @@
 <h1><span class="title">{{ .Title }}</span></h1>
 {{ with .Params.author }}<h2 class="author">{{ . }}</h2>{{ end }}
 {{ if .Params.date }}<h2 class="date">{{ $.Date.Format "2006/01/02" }}</h2>{{ end }}
-{{ if or .Params.video .Params.slides }}
+{{ if or .Params.video .Params.slides .Params.slidesurl }}
 <ul class="talks">
   {{ if .Params.video }}
   <li><a href="{{ .Params.video }}">Video</a></li>
   {{ end }}
   {{ if .Params.slides }}
   <li><a href="/{{ .Params.slides }}">Slides</a></li>
+  {{ end }}
+  {{ if .Params.slidesurl }}
+  <li><a href="{{ .Params.slidesurl }}">Slides</a></li>
   {{ end }}
 </ul>
 {{ end }}
