--- a/themes/hugo-xmin/layouts/partials/header.html
+++ b/themes/hugo-xmin/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     <meta charset="utf-8">
-    <title>{{ .Title }} | {{ .Site.Title }}</title>
+    <title>{{ .Title }}</title>
     <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "/css/fonts.css" | relURL }}" />
     {{ partial "head_custom.html" . }}
